ansible-code/object-resource-2048-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2048-deploy
  namespace: opengame
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    deployment: app2048-deploy
