ansible-code/object-resource-2048-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app2048-deploy
  name: game
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: app2048-deploy
